# libQLBase

./: .cproject  .project  CMakeLists.txt  ChangeLog  Doxyfile.in  INSTALL  Makefile  README.md
cmake-modules/: FindCFITSIO.cmake
code/: CMakeLists.txt
code/IO/: Definitions.h  File.cpp  File.h  InputFile.cpp  InputFile.h  InputFileFITS.cpp  InputFileFITS.h  InputFileFilter.cpp  InputFileFilter.h  InputFileText.cpp  InputFileText.h  InputTextFile.cpp  InputTextFile.h  MIOFile.cpp  MIOFile.h  MIOInputFile.cpp  MIOInputFile.h  MIOInputFileFITS.cpp  MIOInputFileFITS.h  MIOInputFileFilter.cpp  MIOInputFileFilter.h  MIOOutputFileFITS.cpp  MIOOutputFileFITS.h  OutputFile.h  OutputFileFITS.cpp  OutputFileFITS.h  QLInputTextFile.cpp  QLInputTextFile.h
doc/: README
model/: README  libQLBase.vpp
scripts/: CMakeLists.txt  fits2xml.cpp  param2xml.py
src/: CMakeLists.txt
src/IO/: Definitions.h  File.cpp  File.h  InputFile.cpp  InputFile.h  InputFileFITS.cpp  InputFileFITS.h  InputFileFilter.cpp  InputFileText.cpp  InputFileText.h  InputTextFile.cpp  InputTextFile.h  OutputFile.h  OutputFileFITS.cpp  OutputFileFITS.h
src/IO/tests/: CMakeLists.txt  img.csv  sample.fits  testFileFITS.cpp  testInputFileFITS.cpp
src/libastro/: CMakeLists.txt  TFFitsIO.cxx  TFFitsImgIO.cxx  TFFitsTblIO.cxx  TFIOElement.cxx  TFLinkDef.h  TFTStringLinkDef.h  astroImage.cxx  astroImage.h  astroRegion.cxx  astroRegion.h  astrorootLinkDef.h  imageLinkDef.h  readRegion.cxx
tests/: CMakeLists.txt  sample.fits  sample.txt  testFileFITS.cpp  testFileText.cpp
